# genomepy

./: .buildinfo  .codeclimate.yml  .flake8  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.html  README.md  conftest.py  environment.yml  genindex.html  index.html  objects.inv  old_MANIFEST.in_old  old_conftest.py_old  old_requirements-dev.txt_old  old_requirements.txt_old  py-modindex.html  pyproject.toml  release_checklist.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py
.doctrees/: README.doctree  environment.pickle  index.doctree  release_checklist.doctree
.github/: Dockerfile
_autosummary/: genomepy.annotation.Annotation.html  genomepy.annotation.filter_regex.html  genomepy.annotation.html  genomepy.annotation.mygene.ensembl_genome_info.html  genomepy.annotation.mygene.html  genomepy.annotation.mygene.map_genes.html  genomepy.annotation.mygene.parse_mygene_input.html  genomepy.annotation.mygene.query_mygene.html  genomepy.annotation.sanitize.contig_conversion_dict.html  genomepy.annotation.sanitize.document_sanitizing.html  genomepy.annotation.sanitize.filter_contigs.html  genomepy.annotation.sanitize.full_genome_headers.html  genomepy.annotation.sanitize.html  genomepy.annotation.sanitize.match_contigs.html  genomepy.annotation.sanitize.sanitize.html  genomepy.annotation.utils.count_columns.html  genomepy.annotation.utils.generate_annot.html  genomepy.annotation.utils.html  genomepy.annotation.utils.read_annot.html  genomepy.annotation.utils.write_annot.html  genomepy.argparse_support.html  genomepy.argparse_support.parse_genome.html  genomepy.caching.clean.html  genomepy.caching.html  genomepy.cli.custom_options.html  genomepy.cli.get_install_options.html  genomepy.cli.html  genomepy.cli.terminal_formatting.html  genomepy.cli.terminal_header.html  genomepy.cli.terminal_subheader.html  genomepy.config.Config.html  genomepy.config.generate_config.html  genomepy.config.html  genomepy.config.manage_config.html  genomepy.exceptions.GenomeDownloadError.html  genomepy.exceptions.html  genomepy.files.bgzip_and_name.html  genomepy.files.extract_archive.html  genomepy.files.extract_gzip.html  genomepy.files.extract_tarball.html  (+130 more)
_sources/: README.md.txt  index.rst.txt  release_checklist.md.txt
content/: about.html  api_core.html  api_full.html  command_line.html  config.html  help_faq.html  installation.html
docs/: Makefile  README.md  README.txt  conf.py  index.rst  release_checklist.md  requirements.yaml
genomepy/: __about__.py  __init__.py  annotation.py  argparse_support.py  base.py  caching.py  cli.py  exceptions.py  files.py  functions.py  genome.py  logging.py  online.py  plugin.py  provider.py  seq.py  tips_Simon  utils.py
paper/: paper.bib  paper.md
tests/: .coveragerc  (+84 more)
(+431 files in other folders)
